project_src += [
    # C files
    files('main.c'),
    files('tasks/interrupt.c'),
    files('data/data.c'),

    # C++ Files
    files('drivers/display.cpp'),
    files('tasks/init.cpp'),
    files('tasks/display.cpp'),
    files('tasks/dequeuer.cpp'),
    files('tasks/uart.cpp'),
    files('tasks/tasks.cpp'),
]

project_inc += [include_directories('.')]
