project_src += [
    # C files
    files('main.c'),

    # C++ Files
    files('drivers/display.cpp'),

    files('tasks/dequeuer.cpp'),
    files('tasks/display.cpp'),
    files('tasks/init.cpp'),
    files('tasks/tasks.cpp'),
    files('tasks/uart.cpp'),
]

project_inc += [include_directories('.')]
